dev/deployment.yaml
#deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metric-backend-deployment
spec:
  selector:
    matchLabels:
      app: metric-backend
  template:
    metadata:
      labels:
        app: metric-backend
    spec:
      containers:
        - name: metric-backend
          image: harmanpreet27/metric-backend
---
#service
apiVersion: v1
kind: Service
metadata:
  name: metric-backend-service
spec:
  type: NodePort
  selector:
    app: metric-backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000 # should match the secret's port or else it won't work
      nodePort: 31000
