dev/frontend.yaml
#deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metric-frontend-deployment
spec:
  selector:
    matchLabels:
      app: metric-frontend
  template:
    metadata:
      labels:
        app: metric-frontend
    spec:
      containers:
        - name: metric-frontend
          image: harmanpreet27/metric-frontend
---
#service
apiVersion: v1
kind: Service
metadata:
  name: metric-frontend-service
spec:
  type: NodePort
  selector:
    app: metric-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000 # the port on which you want to expose the service
