dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metric-ingress
  namespace: default
spec:
  rules:
  - host: 388127b6-fcb9-42a6-b41c-39840960f8ea.k8s.civo.com
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: metric-frontend-service
            port:
              number: 3000
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: metric-backend-service
            port:
              number: 4000
